[package]
name = "beertime"
version = "0.1.0"
authors = ["peter <peter.reijnders@verpeteren.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
z3 = "0.6.0"
lazy_static = "1.4.0"
serde_json = "1.0.58"
chrono = { version = "0.4.18", features = ["serde"] }
tera = {version = "1.5.0", default-features = false}
serde = { version = "1.0.116", features = ["derive"]}

