[package]
name = "beertime"
version = "0.1.0"
description = "A tool for planning beer production schedules for breweries"
authors = ["Peter Reijnders <peter.reijnders@verpeteren.nl>",
           "Scott Johnson <scott@foamfactory.io>"
]
edition = "2018"

[dependencies]
z3 = "0.6.0"
chrono = { version = "0.4.18", features = ["serde"] }
clap = { version = "3.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
