[package]
name = "beertime"
version = "0.1.0"
description = "A tool for planning beer production schedules for breweries"
authors = ["Peter Reijnders <peter.reijnders@verpeteren.nl>",
           "Scott Johnson <scott@foamfactory.io>"
]
edition = "2021"

[dependencies]
chrono = "0.4.24"
clap = "4.1.13"
serde_json = "1.0.94"
z3 = {version="0.11.2", features = ["static-link-z3"]}

[dev-dependencies]
assert_approx_eq = "1.1.0"
